--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
             <td>Jose</td>
             <td>Atirador de Elite</td>
             <td>Não</td>
+
         </tr>
+        <tr>
+            <td>Jose</td>
+            <td>Atirador de Elite</td>
+            <td>Não</td>
+
+        </tr>
+        <tr>
+            <td>Joao pedro</td>
+            <td>estudante</td>
+            <td>Não</td>
+
+        </tr>
+       
     </table>
 </h1>
