tabela completa do css

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-
-</body>
-
-</html>
-<h1>
+    <h1>*Tabela simples*</h1>
     <table border="2">
         <tr>
             <td>Nome</td>
@@ -42,6 +39,47 @@
             <td>Não</td>
 
         </tr>
-       
+
     </table>
-</h1>
+
+    <table id="tabela">
+        <thead>
+            <tr>
+                <th>Produtos</th>
+                <th>Preços</th>
+                <th>Quantidades</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Vodka Sminorf Limao</td>
+                <td>R$ 45,00</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>Bombay</td>
+                <td>R$ 90,00</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>Dolinho </td>
+                <td>R$ 5,00</td>
+                <td>3</td>
+            </tr>
+           <tr>
+            <td>Chivas Regal</td>
+            <td>R$ 126,00</td>
+            <td>5</td>
+           </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <td>
+                    Total: R$ 324,00
+                </td>
+            </tr>
+        </tfoot>
+    </table>
+</body>
+
+</html>
